# apollo-rust-client

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  REVIEW.md  REVIEW_RESULTS.md  application.yaml  docker-compose.yml
.agent/rules/: rust.md
.github/workflows/: rust.yml
docs/wiki/en/: Configuration.md  Design-Cache.md  Design-Client.md  Design-ClientConfig.md  Design-Overview.md  Design-WASM.md  Error-Handling.md  Features.md  Home.md  Installation.md  JavaScript-Usage.md  Rust-Usage.md  Upgrade-Guide.md  WASM-Memory-Management.md
docs/wiki/zh-CN/: Configuration.md  Design-Cache.md  Design-Client.md  Design-ClientConfig.md  Design-Overview.md  Design-WASM.md  Error-Handling.md  Features.md  Home.md  Installation.md  JavaScript-Usage.md  Rust-Usage.md  Upgrade-Guide.md  WASM-Memory-Management.md
docs/wiki/zh-TW/: Configuration.md  Error-Handling.md  Features.md  Home.md  Installation.md  JavaScript-Usage.md  Rust-Usage.md  Upgrade-Guide.md  WASM-Memory-Management.md
scripts/: build.sh  test.sh  wasm_api_smoke.js
specs/: README.md  architectural_design.md  data_design.md  decomposition_description.md  interface_design.md
src/: cache.rs  client_config.rs  config.rs  event.rs  event_system.rs  lib.rs  namespace.rs  test_support.rs
src/client/: cache.rs  config.rs  mod.rs
src/namespace/: json.rs  mod.rs  properties.rs  yaml.rs
tests/: readme.rs
tests/wiremock/mappings/: application_default.json  application_grayscale_ip.json  application_grayscale_label.json  application_json.json  application_properties.json  application_public_dotted.json  application_secret.json  application_text.json  application_yml.json  http_401.json  http_429.json  http_500.json  malformed_body.json  timeout.json
