[package]
name = "apollo-rust-client"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
description = "A Rust client for Apollo configuration center"
authors = ["Qian Qiao <qian.qiao@pm.me>"]
repository = "https://github.com/qqiao/apollo-rust-client"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version = "1.13.1", features = ["tokio1"] }
base64 = "0.22.1"
cfg-if = "1.0.1"
futures = "0.3.31"
hmac = "0.12.1"
log = "0.4.27"
reqwest = "0.12.20"
serde_json = "1.0.140"
sha1 = "0.10.6"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["sync", "rt"] }
chrono = "0.4.41"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
url = "2.5.4"
serde-wasm-bindgen = "0.6.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.41", features = ["wasmbind"] }
wasm-bindgen-test = "0.3.50"
wasm-logger = "0.2.0"
js-sys = "0.3.77"

[dev-dependencies]
env_logger = "0.11.8"
lazy_static = "1.5.0"
tokio = { version = "1.45.1", features = ["macros"] }
web-sys = { version = "0.3.77", features = ["Window", "console"] }

[profile.dev]
debug = true
