[package]
name = "apollo-rust-client"
version = "0.6.2"
edition = "2024"
license = "Apache-2.0"
description = "A Rust client for Apollo configuration center"
authors = ["Qian Qiao <qian.qiao@pm.me>"]
repository = "https://github.com/qqiao/apollo-rust-client"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version = "1.13.2", features = ["tokio1"] }
base64 = "0.22.1"
cfg-if = "1.0.4"
futures = "0.3.31"
hmac = "0.12.1"
log = "0.4.28"
reqwest = "0.12.23"
serde_yaml = "0.9.34"
serde_json = "1.0.145"
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync", "rt"] }
chrono = "0.4.42"
wasm-bindgen = "0.2.104"
url = "2.5.7"
serde-wasm-bindgen = "0.6.5"
serde = "1.0.228"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.42", features = ["wasmbind"] }
wasm-bindgen-test = "0.3.54"
wasm-logger = "0.2.0"
js-sys = "0.3.81"
wasm-bindgen-futures = "0.4.54"

[dev-dependencies]
env_logger = "0.11.8"
lazy_static = "1.5.0"
tokio = { version = "1.48.0", features = ["macros"] }
web-sys = { version = "0.3.81", features = ["Window", "console"] }

[profile.dev]
debug = true

[lints.clippy]
pedantic = "warn"
