[package]
name = "apollo-rust-client"
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
description = "A Rust client for Apollo configuration center"
authors = ["Qian Qiao <qian.qiao@pm.me>"]
repository = "https://github.com/qqiao/apollo-rust-client"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
cfg-if = "1.0.4"
futures = "0.3.32"
hmac = "0.13.0"
log = "0.4.32"
reqwest = { version = "0.12.28", default-features = false, features = ["http2", "json"] }
serde_yaml = "0.9.34"
serde_json = "1.0.149"
sha1 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["sync", "rt", "time", "io-util"] }
chrono = "0.4.45"
wasm-bindgen = "0.2.122"
url = "2.5.8"
serde-wasm-bindgen = "0.6.5"
serde = "1.0.228"

[features]
default = ["native-tls"]
native-tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4.45", features = ["wasmbind"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.99"
wasm-bindgen-futures = "0.4.72"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.52.1", features = ["fs"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen-test = "0.3.72"
wasm-logger = "0.2.0"

[dev-dependencies]
env_logger = "0.11.10"
tokio = { version = "1.52.1", features = ["macros"] }
web-sys = { version = "0.3.95", features = ["Window", "console"] }

[profile.dev]
debug = true

[lints.clippy]
pedantic = "warn"
